class Category {
    #ancestor;
    name;

    constructor(name) {
        this.name = name;
    }
}

export { Category }